--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -36,7 +36,8 @@
 	display: inline-block;
 	padding: 9px 48px;
 	border-radius: 24px;
-	background-color: var(--tp-theme-green);
+	// background-color: var(--tp-theme-green);
+	background: linear-gradient(90deg, #70A044 40%, #345D0F 100%,);
 
 	&:hover{
 		background-color: #42603D;
