--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -36,7 +36,7 @@
 	display: inline-block;
 	padding: 9px 48px;
 	border-radius: 24px;
-	background-color: var(--tp-theme-green);
+	background: linear-gradient(to right, #70A044, #345D0F);
 
 	&:hover{
 		background-color: #42603D;
